Closed
Bug 1270575
Opened 10 years ago
Closed 10 years ago
Media Encoder threads leak until shutdown in MediaRecorder
Categories
(Core :: Audio/Video: Recording, defect, P1)
Core
Audio/Video: Recording
Tracking
()
RESOLVED
FIXED
mozilla49
People
(Reporter: jesup, Assigned: jesup)
References
(Blocks 1 open bug)
Details
(Whiteboard: [memshrink])
Attachments
(1 file, 1 obsolete file)
|
2.42 KB,
patch
|
pehrsons
:
review+
|
Details | Diff | Splinter Review |
When you Stop() a MediaRecorder, the Media Encoder thread isn't shut down. If a MediaRecorder is running *at* shutdown, it uses a shutdown observer to kill the thread and close things, but normal patterns leave them lying around.
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → rjesup
Rank: 17
Priority: -- → P1
Whiteboard: [memshrink]
| Assignee | ||
Comment 1•10 years ago
|
||
MozReview-Commit-ID: Flf5JGyWHkF
Attachment #8749299 -
Flags: review?(pehrsons)
| Assignee | ||
Comment 2•10 years ago
|
||
Stop() is too early to shut down the read thread, apparently, though perhaps we could with a larger rework. This seems simple and upliftable if we want.
Attachment #8749673 -
Flags: review?(pehrsons)
| Assignee | ||
Updated•10 years ago
|
Attachment #8749299 -
Attachment is obsolete: true
Attachment #8749299 -
Flags: review?(pehrsons)
| Assignee | ||
Comment 3•10 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=52482f7d221b
(and https://treeherder.mozilla.org/#/jobs?repo=try&revision=65ce4eac1b3b with bug 988464's patch, which may show assertions for DOM Worker not shutting down in time).
Updated•10 years ago
|
Attachment #8749673 -
Flags: review?(pehrsons) → review+
| Assignee | ||
Comment 5•10 years ago
|
||
Note this really is a leak; multiple threads will leak if you use it multiple times. They do get cleaned up by nsThreadManager which is why it was never flagged as a leak.
Presumably would affect pretty much every release.
Wontfix for esr45 as this is just a leak. Same rationale for 47.
status-firefox46:
--- → wontfix
status-firefox47:
--- → wontfix
status-firefox48:
--- → affected
status-firefox49:
--- → affected
status-firefox-esr45:
--- → wontfix
| Assignee | ||
Updated•10 years ago
|
Comment 6•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in
before you can comment on or make changes to this bug.
Description
•