Bug 1270575: Shut down Media Encoder thread (don't leak it) r=pehrsons

MozReview-Commit-ID: Flf5JGyWHkF